# cpp-polymorph-class

./: CMakeLists.txt  LICENCE  README.md  README_FR.md
polymorphe/: class-multi-array-polymorphe.hpp  main-polymorphe.cpp
variant/: class-multi-array-variant.hpp  main-variant.cpp
